2008-10-16 Nicolas
* Allow portal_transforms to convert html content to odt, pdf, doc by using oood

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-24 yusei
* Update xml format.

2008-09-16 Kazuhiko
* move Divergence Tester, Delivery Builder, Delivery Tool, Order Builder, Order Tool, delivery_causality_interaction_workflow, delivery_causality_workflow, delivery_movement_causality_interaction_workflow, delivery_movement_simulation_interaction_workflow, delivery_simulation_interaction_workflow, order_movement_simulation_interaction_workflow, order_simulation_interaction_workflow and simulation_movement_causality_interaction_workflow from erp5_core to erp5_base.

2008-09-09 yusei
* Fixed wrong messages.

2008-09-07 yusei
* Replace "+" with " " in translation messages.

2008-09-04 yusei
* Update English messages.

2008-09-03 yusei
* Remove Route Tool portal type which is not used.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_.

2008-08-11 vincentd
* fix Base_jumpToRelatedObject to avoid a probleme with bad form_id when jumping on a single object

2008-08-06 jerome
* Change Movement_getPriceCalculationOperandDict to use source_section / destination_section instead of source / destination.
* Change Movement_getPriceCalculationOperandDict to give priority to supply lines contained in related trade conditions.

2008-08-05 vincentd
* Add two new parameter for jumping with the method Base_jumpToRelatedObject, one for
chose to take another item as context and another for choosing a different form_id if there is only one object for jump

2008-07-29 nicolas
Change brain class of TrackingList results

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-20 yusei
* Added Logical Compact Path, Indented Compact Title and  removed Compact Title in ui preference.

2008-06-12 aurel
* Set description on field from glossary

2008-06-11 yusei